--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,600');
 
+Aa {
+	color: #328fa9;
+}
+.skillButtons {
+	display: flex;
+  	align-items: center;
+	justify-content: center;
+	position: relative
+}
+
+.skillButtons Button {
+	margin: 20px;
+	padding: 20px;
+	background-color: #c1f5ee;
+	color: #328fa9;
+}
+
 .projectLink {
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -11,6 +28,7 @@
   padding-right: 10vw;	
   padding-left: 10vw;
   justify-content: center;
+  /* background-color: #6898a6; */
   /* width: 100vw; */
 }
 #header {
@@ -71,6 +89,8 @@
 }
 .experienceBox {
 	background-color: #88888850;
+	/* background-color: white; */
+	/* background-color: #328fa9; */
 	margin: 2vh;
 	padding: 2vh;
 	border-radius: 15px;
@@ -87,6 +107,7 @@
 	height: 100vh; 
 	background-attachment: fixed;
 	background-position: center;
+	background-image: url("/images/fall.jpeg");
 }
 #contact img {
 	background-color: white;
@@ -221,6 +242,12 @@ li {
 	#about {
 		padding-left: 0vw;
 	}
+	.skillButtons {
+		display:flex;
+		flex-wrap: wrap;
+		justify-content: center ; /* for horizontal aligning of child divs */
+		align-items : center ; /* for vertical aligning */
+	}
 }
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -237,5 +264,10 @@ li {
 		background-color: #363854;
 		background-image: url("/images/header.jpeg");
 		/* background-image: none; */
+	}
+	#contact {
+		background-color: #363854;
+		background-image: url("/images/header.jpeg");
+		opacity: .9;
 	}
 } 
