--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,8 @@ a:hover {
 #sections {
   padding-right: 10vw;	
   padding-left: 10vw;
-  justify-content: center;
+  /* justify-content: center; */
   background-color: #ddecf0;
-  /* width: 100vw; */
 }
 #header {
 	height: 100vh; 
@@ -52,14 +51,6 @@ a:hover {
 	background-attachment: fixed;
 	background-position: center;
 	visibility: visible;
-	/* opacity: .9; */
-}
-#break2 {
-	height: 30vh; 
-	background-attachment: fixed;
-	background-position: center;
-	visibility: visible;
-	/* opacity: .9; */
 }
 .title {
 	padding-top: 40vh;
@@ -80,7 +71,6 @@ a:hover {
 	font-size: 40px;
 	padding-bottom: 0;
 	margin-bottom: 0;
-	/* background-color: #363854; */
 	text-align: center;
 }
 
@@ -88,6 +78,10 @@ a:hover {
   display: flex;
   justify-content: center;
   padding-top: 6vh;
+  background-color: #88888850;
+  margin-top: 2vh;
+  padding: 2vh;
+  border-radius: 15px;
 }
 #about {
   padding-left: 5vw;
@@ -98,8 +92,6 @@ a:hover {
 }
 .experienceBox {
 	background-color: #88888850;
-	/* background-color: white; */
-	/* background-color: #328fa9; */
 	margin: 2vh;
 	padding: 2vh;
 	border-radius: 15px;
@@ -167,84 +159,16 @@ li {
 	font-weight: lighter;
 	/* line-height: 1.5; */
 }
-
-
-.row {
-	display: flex;
-	flex-wrap: wrap;
-	padding: 0 4px;
-}
+.collapsed {
+		width: 15% !important; 
+	}
   
-/* Create four equal columns that sits next to each other */
-.column {
-	flex: 20%;
-	max-width: 25%;
-	padding: 0 4px;
-}
-.column img {
-	margin-top: 8px;
-	/* vertical-align: middle; */
-	width: 100%;
-}
-
-.imgcontainer {
-	position: relative;
-	width: 100%;
-}
-.image {
-	display: block;
-	/* width: auto; */
-	/* height: auto; */
-}
-  
-.overlay {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	padding: 0 4px;
-	height: 100%;
-	/* width: 82%; */
-	opacity: 0;
-	transition: .5s ease;
-	background-color: #363854;
-}
-  
-.imgcontainer:hover .overlay {
-	opacity: .85;
-}
-  
-.text {
-	color: white;
-	font-size: 20px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	text-align: center;
-}
-
-
-  
-/* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
-	.column {
-		flex: 45%;
-		max-width: 50%;
-	}
-	.container {
-		display: inline;
-	}
 	#about-me {
-		/* display: inline; */
 		flex-wrap: wrap;
-		padding-top: 8vh;
+		padding-top: 5vh;
 	} 
 	.me {
-		/* width: 220px; */
 		padding-top: 0;
 		padding-bottom: 1vh;
 	}
@@ -252,23 +176,15 @@ li {
 		padding-left: 0vw;
 	}
 	.skillButtons {
-		display:flex;
+		display:inline-flex;
 		flex-wrap: wrap;
 		justify-content: center ; /* for horizontal aligning of child divs */
 		align-items : center ; /* for vertical aligning */
 	}
-	.githubLogo {
-		display: none;
-	}
 }
   
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-	.column {
-		flex: 100%;
-		max-width: 100%;
-	}
-	#break, #break2 {
+	#break {
 		height: 0;
 		visibility: hidden;
 	}
@@ -280,5 +196,14 @@ li {
 		background-color: #328fa9;
 		background-image: none;
 		opacity: .9;
+	}
+	.githubLogo {
+		display: none;
+	}
+	.experienceBox {
+		margin-bottom: 0px;
+	}
+	h1 {
+		margin-top: 2vh;
 	}
 } 
